crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__shared_integer.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#1 : Data = (con data (I 42)) in
let alias#2 : Data = data#1 in
constr 0 data#1 (case@Data alias#2 of
  DataI payload#3 -> payload#3) (case@Data alias#2 of
  DataI payload#4 -> payload#4)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    [(lam alias_2
      (constr 0
        data_1
        [(lam generated_5
          (force
            [[[[[[(force (builtin chooseData)) generated_5] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_3 payload_3) [(builtin unIData) generated_5]])]
              (delay (error))]))
          alias_2]
        [(lam generated_6
          (force
            [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_4 payload_4) [(builtin unIData) generated_6]])]
              (delay (error))]))
          alias_2]))
      data_1])
    (con data (I 42))])
--- optimized Core
let data#5 : Data = (con data (I 42)) in
let anf#9 : int = case@Data data#5 of
  DataI payload#7 -> payload#7 in
let anf#10 : int = case@Data data#5 of
  DataI payload#8 -> payload#8 in
constr 0 data#5 anf#9 anf#10
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam data_1
      [(lam anf_3
        [(lam anf_6 (constr 0 data_1 anf_3 anf_6))
          [(lam generated_7
            (force
              [[[[[[builtin_8 generated_7] (delay (error))] (delay (error))] (delay (error))]
                (delay [(lam payload_4 payload_4) [(builtin unIData) generated_7]])]
                (delay (error))]))
            data_1]])
        [(lam generated_9
          (force
            [[[[[[builtin_8 generated_9] (delay (error))] (delay (error))] (delay (error))]
              (delay [(lam payload_2 payload_2) [(builtin unIData) generated_9]])]
              (delay (error))]))
          data_1]])
      (con data (I 42))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let data#1 : Data = (con data (I 42)) in
let alias#2 : Data = data#1 in
let anf#5 : int = case@Data alias#2 of
  DataI payload#3 -> payload#3 in
let anf#6 : int = case@Data alias#2 of
  DataI payload#4 -> payload#4 in
constr 0 data#1 anf#5 anf#6
--- isolated folded Core
let data_payload#7 : int = 42 in
let data#1 : Data = (con data (I 42)) in
let alias#2 : Data = data#1 in
let anf#5 : int = let payload#3 : int = data_payload#7 in
payload#3 in
let anf#6 : int = let payload#4 : int = data_payload#7 in
payload#4 in
constr 0 data#1 anf#5 anf#6
--- isolated cleaned Core
constr 0 (con data (I 42)) 42 42
--- isolated UPLC before
(program 1.1.0
  [(lam data_1
    [(lam alias_2
      [(lam anf_5
        [(lam anf_6 (constr 0 data_1 anf_5 anf_6))
          [(lam generated_7
            (force
              [[[[[[(force (builtin chooseData)) generated_7] (delay (error))] (delay (error))]
                (delay (error))]
                (delay [(lam payload_4 payload_4) [(builtin unIData) generated_7]])]
                (delay (error))]))
            alias_2]])
        [(lam generated_8
          (force
            [[[[[[(force (builtin chooseData)) generated_8] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_3 payload_3) [(builtin unIData) generated_8]])]
              (delay (error))]))
          alias_2]])
      data_1])
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0 (constr 0 (con data (I 42)) (con integer 42) (con integer 42)))
--- result
(constr 0 (con data (I 42)) (con integer 42) (con integer 42))
--- logs
[]
