crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__shared_list.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#22 : Data = (con data (List [I 42])) in
let alias#23 : Data = data#22 in
constr 0 data#22 (case@Data alias#23 of
  DataList payload#24 -> payload#24) (case@Data alias#23 of
  DataList payload#25 -> payload#25)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_22
    [(lam alias_23
      (constr 0
        data_22
        [(lam generated_26
          (force
            [[[[[[(force (builtin chooseData)) generated_26] (delay (error))] (delay (error))]
              (delay [(lam payload_24 payload_24) [(builtin unListData) generated_26]])]
              (delay (error))]
              (delay (error))]))
          alias_23]
        [(lam generated_27
          (force
            [[[[[[(force (builtin chooseData)) generated_27] (delay (error))] (delay (error))]
              (delay [(lam payload_25 payload_25) [(builtin unListData) generated_27]])]
              (delay (error))]
              (delay (error))]))
          alias_23]))
      data_22])
    (con data (List [I 42]))])
--- optimized Core
let data#1 : Data = (con data (List [I 42])) in
let anf#5 : list Data = case@Data data#1 of
  DataList payload#3 -> payload#3 in
let anf#6 : list Data = case@Data data#1 of
  DataList payload#4 -> payload#4 in
constr 0 data#1 anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam data_2
      [(lam anf_8
        [(lam anf_10 (constr 0 data_2 anf_8 anf_10))
          [(lam generated_11
            (force
              [[[[[[builtin_12 generated_11] (delay (error))] (delay (error))]
                (delay [(lam payload_9 payload_9) [(builtin unListData) generated_11]])]
                (delay (error))]
                (delay (error))]))
            data_2]])
        [(lam generated_13
          (force
            [[[[[[builtin_12 generated_13] (delay (error))] (delay (error))]
              (delay [(lam payload_7 payload_7) [(builtin unListData) generated_13]])]
              (delay (error))]
              (delay (error))]))
          data_2]])
      (con data (List [I 42]))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let data#22 : Data = (con data (List [I 42])) in
let alias#23 : Data = data#22 in
let anf#26 : list Data = case@Data alias#23 of
  DataList payload#24 -> payload#24 in
let anf#27 : list Data = case@Data alias#23 of
  DataList payload#25 -> payload#25 in
constr 0 data#22 anf#26 anf#27
--- isolated folded Core
let data_payload#28 : list Data = (con (list data) [(I 42)]) in
let data#22 : Data = (con data (List [I 42])) in
let alias#23 : Data = data#22 in
let anf#26 : list Data = let payload#24 : list Data = data_payload#28 in
payload#24 in
let anf#27 : list Data = let payload#25 : list Data = data_payload#28 in
payload#25 in
constr 0 data#22 anf#26 anf#27
--- isolated cleaned Core
let data_payload#28 : list Data = (con (list data) [(I 42)]) in
constr 0 (con data (List [I 42])) data_payload#28 data_payload#28
--- isolated UPLC before
(program 1.1.0
  [(lam data_22
    [(lam alias_23
      [(lam anf_26
        [(lam anf_27 (constr 0 data_22 anf_26 anf_27))
          [(lam generated_28
            (force
              [[[[[[(force (builtin chooseData)) generated_28] (delay (error))] (delay (error))]
                (delay [(lam payload_25 payload_25) [(builtin unListData) generated_28]])]
                (delay (error))]
                (delay (error))]))
            alias_23]])
        [(lam generated_29
          (force
            [[[[[[(force (builtin chooseData)) generated_29] (delay (error))] (delay (error))]
              (delay [(lam payload_24 payload_24) [(builtin unListData) generated_29]])]
              (delay (error))]
              (delay (error))]))
          alias_23]])
      data_22])
    (con data (List [I 42]))])
--- isolated UPLC after
(program 1.1.0
  [(lam data_payload_28
    (constr 0 (con data (List [I 42])) data_payload_28 data_payload_28))
    (con (list data) [(I 42)])])
--- result
(constr 0
  (con data (List [I 42]))
  (con (list data) [(I 42)])
  (con (list data) [(I 42)]))
--- logs
[]
