crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__shared_nullary_constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#43 : Data = (con data (Constr 59 [])) in
let alias#44 : Data = data#43 in
constr 0 data#43 (case@Data alias#44 of
  DataConstr payload#45 -> payload#45) (case@Data alias#44 of
  DataConstr payload#46 -> payload#46)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_43
    [(lam alias_44
      (constr 0
        data_43
        [(lam generated_47
          (force
            [[[[[[(force (builtin chooseData)) generated_47]
              (delay [(lam payload_45 payload_45) [(builtin unConstrData) generated_47]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_44]
        [(lam generated_48
          (force
            [[[[[[(force (builtin chooseData)) generated_48]
              (delay [(lam payload_46 payload_46) [(builtin unConstrData) generated_48]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_44]))
      data_43])
    (con data (Constr 59 []))])
--- optimized Core
let data#1 : Data = (con data (Constr 59 [])) in
let anf#5 : pair int (list Data) = case@Data data#1 of
  DataConstr payload#3 -> payload#3 in
let anf#6 : pair int (list Data) = case@Data data#1 of
  DataConstr payload#4 -> payload#4 in
constr 0 data#1 anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam data_2
      [(lam anf_8
        [(lam anf_10 (constr 0 data_2 anf_8 anf_10))
          [(lam generated_11
            (force
              [[[[[[builtin_12 generated_11]
                (delay [(lam payload_9 payload_9) [(builtin unConstrData) generated_11]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_2]])
        [(lam generated_13
          (force
            [[[[[[builtin_12 generated_13]
              (delay [(lam payload_7 payload_7) [(builtin unConstrData) generated_13]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          data_2]])
      (con data (Constr 59 []))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let data#43 : Data = (con data (Constr 59 [])) in
let alias#44 : Data = data#43 in
let anf#47 : pair int (list Data) = case@Data alias#44 of
  DataConstr payload#45 -> payload#45 in
let anf#48 : pair int (list Data) = case@Data alias#44 of
  DataConstr payload#46 -> payload#46 in
constr 0 data#43 anf#47 anf#48
--- isolated folded Core
let data_payload#49 : pair int (list Data) = (con (pair integer (list data)) (59, [])) in
let data#43 : Data = (con data (Constr 59 [])) in
let alias#44 : Data = data#43 in
let anf#47 : pair int (list Data) = let payload#45 : pair int (list Data) = data_payload#49 in
payload#45 in
let anf#48 : pair int (list Data) = let payload#46 : pair int (list Data) = data_payload#49 in
payload#46 in
constr 0 data#43 anf#47 anf#48
--- isolated cleaned Core
let data_payload#49 : pair int (list Data) = (con (pair integer (list data)) (59, [])) in
constr 0 (con data (Constr 59 [])) data_payload#49 data_payload#49
--- isolated UPLC before
(program 1.1.0
  [(lam data_43
    [(lam alias_44
      [(lam anf_47
        [(lam anf_48 (constr 0 data_43 anf_47 anf_48))
          [(lam generated_49
            (force
              [[[[[[(force (builtin chooseData)) generated_49]
                (delay [(lam payload_46 payload_46) [(builtin unConstrData) generated_49]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            alias_44]])
        [(lam generated_50
          (force
            [[[[[[(force (builtin chooseData)) generated_50]
              (delay [(lam payload_45 payload_45) [(builtin unConstrData) generated_50]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_44]])
      data_43])
    (con data (Constr 59 []))])
--- isolated UPLC after
(program 1.1.0
  [(lam data_payload_49
    (constr 0 (con data (Constr 59 [])) data_payload_49 data_payload_49))
    (con (pair integer (list data)) (59, []))])
--- result
(constr 0
  (con data (Constr 59 []))
  (con (pair integer (list data)) (59, []))
  (con (pair integer (list data)) (59, [])))
--- logs
[]
