crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__strict_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let effect#1 : int = trace "before" in error in
let data#2 : Data = (con data (I 42)) in
case@Data data#2 of
  DataI payload#3 -> trace "selected" in payload#3
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam effect_1
    [(lam data_2
      [(lam generated_4
        (force
          [[[[[[(force (builtin chooseData)) generated_4]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay
              [(lam payload_3
                (force [[(force (builtin trace)) (con string "selected")] (delay payload_3)]))
                [(builtin unIData) generated_4]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        data_2])
      (con data (I 42))])
    (force [[(force (builtin trace)) (con string "before")] (delay (error))])])
--- optimized Core
let effect#4 : int = trace "before" in error in
case@Data (con data (I 42)) of
  DataI payload#6 -> trace "selected" in payload#6
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam effect_1
          [(lam generated_4
            (force
              [[[[[[builtin_5 generated_4] (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay
                  [(lam payload_2 (force [[builtin_3 (con string "selected")] (delay payload_2)]))
                    [(builtin unIData) generated_4]])]
                (delay (force [partial_6 (delay (error))]))]))
            (con data (I 42))])
          (force [[builtin_3 (con string "before")] (delay (error))])])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let effect#1 : int = trace "before" in error in
let data#2 : Data = (con data (I 42)) in
case@Data data#2 of
  DataI payload#3 -> trace "selected" in payload#3
  _ -> trace "cold" in error
--- isolated folded Core
let effect#1 : int = trace "before" in error in
let data_payload#5 : int = 42 in
let data#2 : Data = (con data (I 42)) in
let payload#3 : int = data_payload#5 in
trace "selected" in payload#3
--- isolated cleaned Core
let effect#1 : int = trace "before" in error in
trace "selected" in 42
--- isolated UPLC before
(program 1.1.0
  [(lam effect_1
    [(lam data_2
      [(lam generated_4
        (force
          [[[[[[(force (builtin chooseData)) generated_4]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay
              [(lam payload_3
                (force [[(force (builtin trace)) (con string "selected")] (delay payload_3)]))
                [(builtin unIData) generated_4]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        data_2])
      (con data (I 42))])
    (force [[(force (builtin trace)) (con string "before")] (delay (error))])])
--- isolated UPLC after
(program 1.1.0
  [(lam effect_1
    (force
      [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))]))
    (force [[(force (builtin trace)) (con string "before")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["before"]
