crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__unselected_bad_arity.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
case@Data (con data (I 42)) of
  DataI p#1 -> 42
  DataB -> 9
--- after
case@Data (con data (I 42)) of
  DataI p#1 -> 42
  DataB -> 9
--- errors
InvalidCase("invalid Data branch")
InvalidCase("invalid Data branch")
