crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__wrong_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data 42 of
  DataI number#1 -> number#1
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam number_1 number_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (con integer 42)])
--- optimized Core
case@Data 42 of
  DataI number#2 -> number#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam generated_2
      (force
        [[[[[[builtin_3 generated_2] (delay (error))] (delay (error))] (delay (error))]
          (delay [(lam number_1 number_1) [(builtin unIData) generated_2]])]
          (delay (error))]))
      (con integer 42)])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data 42 of
  DataI number#1 -> number#1
--- isolated folded Core
case@Data 42 of
  DataI number#1 -> number#1
--- isolated cleaned Core
case@Data 42 of
  DataI number#1 -> number#1
--- isolated UPLC before
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam number_1 number_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (con integer 42)])
--- isolated UPLC after
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam number_1 number_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (con integer 42)])
--- result
error: Runtime(NotData(Integer(42)))
--- logs
[]
